# todo-list

./: .gitignore  Cargo.toml  README.md
migrations/2024-12-22-212217_create_todos/: down.sql  up.sql
src/: argument_parser.rs  main.rs  schema.rs
src/argument_parser/: arguments.rs  mod.rs
src/commands/: add.rs  check_off.rs  mod.rs  remove.rs  show.rs
src/database/: mod.rs
src/database/connector/: mod.rs
src/database/migration_service/: mod.rs
src/database/models/: todos.rs
src/directory_manager/: mod.rs
src/printer/: mod.rs
